kubernetes/manifests/customer-self-service-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-self-service-frontend
  labels:
    app: customer-self-service-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-self-service-frontend
  template:
    metadata:
      labels:
        app: customer-self-service-frontend
    spec:
      containers:
        - env:
            - name: REACT_APP_CUSTOMER_MANAGEMENT_BACKEND
              value: http://customer-management-backend.cldsol.mirioeggmann.ch
            - name: REACT_APP_CUSTOMER_SELF_SERVICE_BACKEND
              value: http://customer-self-service-backend.cldsol.mirioeggmann.ch
            - name: REACT_APP_POLICY_MANAGEMENT_BACKEND
              value: http://policy-management-backend.cldsol.mirioeggmann.ch
          image: mirioeggmann/lakesidemutual-customer-self-service-frontend
          imagePullPolicy: Always
          name: customer-self-service-frontend
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: customer-self-service-frontend
spec:
  selector:
    app: customer-self-service-frontend
  ports:
    - name: "3000"
      port: 3000
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-self-service-frontend
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "customer-self-service-frontend.cldsol.mirioeggmann.ch"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-self-service-frontend
                port:
                  number: 3000
