kubernetes/manifests/policy-management-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-management-frontend
  labels:
    app: policy-management-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: policy-management-frontend
  template:
    metadata:
      labels:
        app: policy-management-frontend
    spec:
      containers:
        - env:
            - name: VUE_APP_POLICY_MANAGEMENT_BACKEND
              value: http://policy-management-backend.cldsol.mirioeggmann.ch
          image: mirioeggmann/lakesidemutual-policy-management-frontend
          imagePullPolicy: Always
          name: policy-management-frontend
          ports:
            - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: policy-management-frontend
spec:
  selector:
    app: policy-management-frontend
  ports:
    - name: "3010"
      port: 3010
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-management-frontend
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "policy-management-frontend.cldsol.mirioeggmann.ch"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policy-management-frontend
                port:
                  number: 3010
