kubernetes/manifests/spring-boot-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-admin
  labels:
    app: spring-boot-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-admin
  template:
    metadata:
      labels:
        app: spring-boot-admin
    spec:
      containers:
        - image: mirioeggmann/lakesidemutual-spring-boot-admin
          imagePullPolicy: Always
          name: spring-boot-admin
          ports:
            - containerPort: 9000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-admin
spec:
  selector:
    app: spring-boot-admin
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-boot-admin
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: "spring-boot-admin.cldsol.mirioeggmann.ch"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-boot-admin
                port:
                  number: 9000
